Add generateQuote(), adjustHTML(), and randomNumberGenerator()

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
 
+    <p class="quote"></p>
+    <p class="character"></p>
+    <p class="film"></p>
+
     <script src="js/quotes.js"></script>
     <script src="js/script.js"></script>
   </body>
