Add button element in HTML and eventListener in JS

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p class="quote"></p>
     <p class="character"></p>
     <p class="film"></p>
+    <button class="newQuote">New Quote</button>
 
     <script src="js/quotes.js"></script>
     <script src="js/script.js"></script>
