Add tweet button index.html. Add tweet function in module along with twitterBtn. Transferred querySelectors from functional scope of adjustHTML() to outer scope.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Random Quotes</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylsheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
@@ -12,6 +13,12 @@
     <p class="quote"></p>
     <p class="character"></p>
     <p class="film"></p>
+    <!-- <a class="twitter"     href="https://twitter.com/intent/tweet?text=Hello%20world" target="_blank">
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+    </a> -->
+    <a class="twitter" target="_blank">
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+    </a>
     <button class="newQuote">New Quote</button>
 
     <script src="js/quotes.js"></script>
