--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html>
   <head>
     <title>Random Quotes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
   </head>
   <body>
+    <div class="wrapper"> <!-- wrapper -->
+      <p class="quote"></p>
+      <div class="references"> <!-- references -->
+        <p class="character"></p>
+        <p class="film"></p>
+      </div> <!-- /.references -->
+      <div class="buttons"> <!-- buttons -->
+      <a class="twitter" target="_blank">
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+      </a>
+      <button class="newQuote">
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </button>
+    </div> <!-- /.buttons -->
+  </div> <!-- /.wrapper -->
 
-    <p class="quote"></p>
-    <p class="character"></p>
-    <p class="film"></p>
-    <!-- <a class="twitter"     href="https://twitter.com/intent/tweet?text=Hello%20world" target="_blank">
-      <i class="fa fa-twitter" aria-hidden="true"></i>
-    </a> -->
-    <a class="twitter" target="_blank">
-      <i class="fa fa-twitter" aria-hidden="true"></i>
-    </a>
-    <button class="newQuote">New Quote</button>
 
     <script src="js/quotes.js"></script>
     <script src="js/script.js"></script>
