--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       </div> <!-- /.container -->
 
       <div class="buttons"> <!-- buttons -->
-        <a class="twitter" target="_blank">
-          <i class="fa fa-twitter" aria-hidden="true"></i>
-        </a>
+        <button>
+          <a class="twitter" target="_blank">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+          </a>
+        </button>
         <button class="newQuote">
           <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </button>
