--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
   </head>
   <body>
-    <div class="wrapper"> <!-- wrapper -->
-      <p class="quote"></p>
-      <div class="references"> <!-- references -->
-        <p class="character"></p>
-        <p class="film"></p>
-      </div> <!-- /.references -->
-      <div class="buttons"> <!-- buttons -->
-      <a class="twitter" target="_blank">
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-      </a>
-      <button class="newQuote">
-        <i class="fa fa-arrow-right" aria-hidden="true"></i>
-      </button>
-    </div> <!-- /.buttons -->
-  </div> <!-- /.wrapper -->
+    <div class="wrap"> <!-- wrap -->
+      <div class="container"> <!-- container -->
+        <p class="quote"></p>
+        <div class="references"> <!-- references -->
+          <p class="character"></p>
+          <p class="film"></p>
+        </div> <!-- /.references -->
+      </div> <!-- /.container -->
 
+      <div class="buttons"> <!-- buttons -->
+        <button>
+          <a class="twitter" target="_blank">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+          </a>
+        </button>
+        <button class="newQuote">
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        </button>
+      </div> <!-- /.buttons -->
+    </div> <!-- /.wrap-->
 
     <script src="js/quotes.js"></script>
     <script src="js/script.js"></script>
